# p2pong

./: .mailmap  CHANGELOG.md  Cargo.toml  DCUTR_FIX_SUMMARY.md  DCUTR_PORT_FIX.md  EXTERNAL_IP_IMPLEMENTATION.md  NETCODE_ARCHITECTURE.md  QUICKSTART.md  QUICK_TEST.sh  QUIC_RELAY_IMPLEMENTATION.md  README.md  REAL_NETWORK_TEST.md  SIMPLIFICATION.md  TESTING.md  TEST_DCUTR_FIX.md  TEST_NETCODE.md  UPNP_IMPLEMENTATION.md  WEBRTC_MIGRATION.md  railway.toml  test_physics.sh  test_sizes.sh
src/: debug.rs  main.rs
src/ai/: backboard_bot.rs  bot.rs  mod.rs  prediction.rs  predictive_bot.rs
src/config/: loader.rs  mod.rs  types.rs
src/game/: input.rs  mod.rs  physics.rs  state.rs
src/game_modes/: ai.rs  common.rs  local.rs  mod.rs  network.rs
src/menu/: input.rs  mod.rs  render.rs  state.rs
src/network/: behaviour.rs  client.rs  mod.rs  protocol.rs  runtime.rs  simple_behaviour.rs  webrtc_runtime.rs
src/ui/: braille.rs  mod.rs  overlay.rs  render.rs
