[package]
name = "p2pong"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"

# P2P networking
libp2p = { version = "0.56", features = [
    "tcp",
    "noise", 
    "yamux", 
    "macros", 
    "tokio", 
    "ping", 
    "gossipsub",
    "relay",      # Relay protocol for NAT traversal
    "dcutr",      # Direct Connection Upgrade through Relay (hole punching)
    "identify",   # Peer identification (required for relay)
    "autonat",    # AutoNAT for discovering external addresses (required for DCUTR)
    "quic",       # QUIC transport for better NAT traversal
    "dns",        # DNS resolution for multiaddrs
    "upnp",       # UPnP for automatic port forwarding
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
void = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
