[package]
name = "p2pong"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"

# WebRTC P2P networking (str0m is Sans-I/O implementation)
str0m = "0.14"
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24"  # WebSocket for signaling
futures = "0.3"
stunclient = "0.4"  # STUN client for NAT traversal

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
