[package]
name = "p2pong"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"

# WebRTC P2P networking (str0m is Sans-I/O implementation)
str0m = "0.14"
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }  # WebSocket for signaling with TLS support
axum = { version = "0.7", features = ["ws"] }  # HTTP server for Railway WebSocket support
futures = "0.3"
stunclient = "0.4"  # STUN client for NAT traversal

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Utilities
anyhow = "1"
tracing = "0.1"  # Note: Used by signaling-server binary, not the game
tracing-subscriber = "0.3"  # Note: Used by signaling-server binary, not the game
if-addrs = "0.14.0"

# Configuration
toml = "0.8"
dirs = "5"

# AI
rand = "0.8"
rand_distr = "0.4"
